libs/ui/kis_painting_assistants_decoration.cpp
@@ -419,6 +419,7 @@ void KisPaintingAssistantsDecoration::toggleAssistantVisible()
 
 void KisPaintingAssistantsDecoration::toggleOutlineVisible()
 {
+    // "outline" means assistant preview (line that depends on the mouse cursor)
     setOutlineVisible(!outlineVisibility());
 }
 
